tests/ui/type-alias-impl-trait/multiple-def-uses-in-one-fn.stderr
error[E0277]: the trait `Into<&B>` is not implemented for `&A`
  --> $DIR/multiple-def-uses-in-one-fn.rs:9:45
   |
LL | fn f<A, B: 'static>(a: &'static A, b: B) -> (X<A, B>, X<B, A>) {
   |                                             ^^^^^^^^^^^^^^^^^^ the trait `Into<&B>` is not implemented for `&A`, which is required by `&A: Into<&'static B>`
   |
   = note: required for `&A` to implement `Into<&'static B>`
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | fn f<A, B: 'static>(a: &'static A, b: B) -> (X<A, B>, X<B, A>) where &A: Into<&'static B> {
   |                                                                ++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
